# OSWorld_APP

./: .gitignore  DAY2_COMPLETION.md  DAY3_COMPLETION.md  INCOMPLETE_FEATURES.md  INCOMPLETE_FEATURES_COMPLETED.md  README.md  config.yaml  pyproject.toml  test.py  workflow.md
app/: __init__.py  config.py  evaluator_runner.py  floating_overlay.py  gui.py  logging_setup.py  models.py  snapshot.py  task_adapter.py  vm_control.py
docs/: QuickStart.md
evaluators/: eval.py  generic_action_runner.py  requirements.txt
runs/20250918_003938_030eeff7-b492-4218-b312-701ec99ee0cc/: task.json
runs/20250918_115559_simple-notepad-test/: task.json
scripts/: build.ps1  eval_guest.ps1  run_config_guest.ps1  setup_vm_autologin.ps1  test_basic_start_and_running.py  test_floating_overlay.py  test_revert_snapshot.py  test_snapshot_revert.py  test_software_after_logon.py
tasks/samples/: chrome_do_not_track.json  notepad_simple.json
