[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annotator-kit"
version = "0.1.0"
description = "OSWorld Human Annotation Kit"
authors = [{name = "OSWorld Team"}]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0",
]

[tool.pyinstaller]
name = "AnnotatorKit"
icon = "assets/icon.ico"
noconsole = true
onefile = true
entry-point = "app.gui:main"
